--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "express": "4.13.3",
     "gulp": "3.9.0",
-    "gulp-concat": "2.6.0",
-    "gulp-react": "3.0.1",
-    "gulp-util": "3.0.6",
     "react": "0.13.3"
   },
-
   "devDependencies": {
-    
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.4.1",
+    "gulp-react": "3.0.1",
+    "gulp-util": "3.0.6"
   }
 }
