--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "devDependencies": {
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-react": "3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.1",
-    "gulp-react": "3.0.1",
     "gulp-util": "3.0.6"
   }
 }
