--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gulp-concat": "2.6.0",
     "gulp-react": "3.0.1",
     "gulp-util": "3.0.6",
-    "react": "0.13.3"
+    "react": "0.13.3",
+    "react-router": "^0.13.3",
+    "reactify": "^1.1.1"
   },
 
   "devDependencies": {
