--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "gulp-concat": "^2.6.0",
+    "gulp-html-replace": "^1.5.4",
     "gulp-jshint": "^1.11.2",
     "gulp-nodemon": "^2.0.4",
     "gulp-react": "3.0.1",
