--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "reactify": "^1.1.1"
   },
   "devDependencies": {
+    "browserify": "^11.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.4",
     "gulp-jshint": "^1.11.2",
@@ -20,6 +21,9 @@
     "gulp-react": "3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.1",
-    "gulp-util": "3.0.6"
+    "gulp-util": "3.0.6",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.4.0"
   }
 }
