--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.4",
     "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.4",
+    "gulp-notify": "^2.2.0",
     "gulp-react": "3.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "3.0.6",
     "reactify": "^1.1.1",
