--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - "0.12"
-script: gulp production
-cache:
-  directories:
-    - node_modules
+before_script:
+  - npm install -g gulp
+script: gulp
+# cache:
+#   directories:
+#     - node_modules
