--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,14 @@
 {
   "name": "Immedia",
-  "description": "Physics-like animations for pretty particles",
-  "main": [
-    "js/motion.js",
-    "sass/motion.scss"
-  ],
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
-  "moduleType": [
-    "node"
-  ],
-  "keywords": [
-  ],
-  "authors": [
-    "Uche Nnadi <ucheunnadi@gmail.com>,
-     Jackson Sierra <add your email>,
-     OJ <add your email>,
-     Ryan <add your email>,
-     Joel <add your email>"
-  ],
+  "version": "0.0.1",
+  "authors": [],
   "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+    "bower_components"
+  ],
+  "dependencies": {
+    "d3": "~3.5.6"
+  }
 }
