[update] update package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Our Immedia App Node dependencies",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "4.13.3",
     "gulp": "3.9.0",
     "react": "0.13.3",
