--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bluebird": "^2.10.1",
     "body-parser": "^1.14.1",
+    "cors": "^2.7.1",
     "express": "4.13.3",
     "gulp": "3.9.0",
     "q": "^1.4.1",
