--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "0.13.3",
     "react-redux": "^3.0.1",
     "react-router": "^0.13.3",
+    "react-style": "^0.5.5",
     "reactify": "^1.1.1",
     "redux": "^3.0.2",
     "request": "^2.64.0"
