--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "request": "^2.64.0"
   },
   "devDependencies": {
-    "gulp-sftp": "0.1.5",
     "browserify": "^11.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.4",
@@ -28,6 +27,8 @@
     "gulp-notify": "^2.2.0",
     "gulp-react": "3.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-sftp": "0.1.5",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "3.0.6",
