--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "4.13.3",
     "express-cors": "0.0.3",
     "gulp": "3.9.0",
+    "mongodb-uri": "^0.9.7",
+    "mongoose": "^4.1.10",
     "q": "^1.4.1",
     "react": "0.13.3",
     "react-redux": "^3.0.1",
