--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bluebird": "^2.10.1",
     "body-parser": "^1.14.1",
     "cors": "^2.7.1",
+    "cron": "^1.0.9",
     "express": "4.13.3",
     "express-cors": "0.0.3",
     "gulp": "3.9.0",
