--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-style": "^0.5.5",
     "reactify": "^1.1.1",
     "redux": "^3.0.2",
-    "request": "^2.64.0"
+    "request": "^2.64.0",
+    "twitter": "~1.2.5"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
