--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "bluebird": "^2.10.1",
     "body-parser": "^1.14.1",
+    "chai": "^3.3.0",
     "cors": "^2.7.1",
     "cron": "^1.0.9",
     "express": "4.13.3",
     "express-cors": "0.0.3",
     "fuzzyset.js": "0.0.1",
     "gulp": "3.9.0",
+    "gulp-mocha": "^2.1.3",
+    "mocha": "^2.3.3",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.1.10",
     "q": "^1.4.1",
@@ -21,7 +24,8 @@
     "reactify": "^1.1.1",
     "redux": "^3.0.2",
     "request": "^2.64.0",
-    "twitter": "~1.2.5"
+    "supertest": "^1.1.0",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
